appId: ''
---
- tapOn:
    id: browse-tab
- copyTextFrom:
    id: recipe-card
    index: 0
- tapOn:
    id: recipe-card
    index: 0
